// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile component Profile connected snapshot test 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/search"
        onClick={[Function]}
      >
        rechercher
      </a>
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        se déconnecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <section
    className="Profile"
  >
    <form
      className="ProfileForm"
    >
      <div
        className="header_container"
      >
        <h1>
          Appuyer sur le crayon pour modifier
        </h1>
        <img
          alt="Profile"
          className="profilePicture"
          src="default_woman.svg"
        />
        <img
          alt="Modifier/Annuler"
          className="deleteCancelPicture"
          onClick={[Function]}
          src="edit.png"
        />
      </div>
      <div
        className="field_container"
      >
        <p>
           Téléphone 
        </p>
        <p
          className="right needed"
        >
           Nom 
        </p>
        <input
          className="telephone"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="lastName"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <p>
           Département 
        </p>
        <p
          className="right p_info needed"
        >
           Prénom 
        </p>
        <div
          className="DropDown"
        >
          <select
            className="department"
            disabled={true}
            onChange={[Function]}
            value={0}
          >
            <option
              value={0}
            >
               Choisir une option
            </option>
          </select>
        </div>
        <input
          className="firstName"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <p
          className="needed"
        >
           Adresse mail 
        </p>
        <p>
           Travaille chez 
        </p>
        <input
          className="email"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="company"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="button_container"
      />
      <div
        className="modal"
      />
    </form>
    <div
      className="position_form"
    >
      <h1>
        Postes occupés à ETIC
      </h1>
      <div
        className="positions"
      >
         
         
      </div>
      <input
        className="input_button add_position hidden"
        onClick={[Function]}
        type="button"
        value="Ajouter"
      />
    </div>
  </section>,
]
`;

exports[`Profile component Profile not connected snapshot test 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/search"
        onClick={[Function]}
      >
        rechercher
      </a>
      <a
        className="button"
        href="/connection"
        onClick={[Function]}
      >
        se connecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <section
    className="Profile"
  >
    <form
      className="ProfileForm"
    >
      <div
        className="header_container"
      >
        <h1>
          Appuyer sur le crayon pour modifier
        </h1>
        <img
          alt="Profile"
          className="profilePicture"
          src="default_woman.svg"
        />
        <img
          alt="Modifier/Annuler"
          className="deleteCancelPicture"
          onClick={[Function]}
          src="edit.png"
        />
      </div>
      <div
        className="field_container"
      >
        <p>
           Téléphone 
        </p>
        <p
          className="right needed"
        >
           Nom 
        </p>
        <input
          className="telephone"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="lastName"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <p>
           Département 
        </p>
        <p
          className="right p_info needed"
        >
           Prénom 
        </p>
        <div
          className="DropDown"
        >
          <select
            className="department"
            disabled={true}
            onChange={[Function]}
            value={0}
          >
            <option
              value={0}
            >
               Choisir une option
            </option>
          </select>
        </div>
        <input
          className="firstName"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <p
          className="needed"
        >
           Adresse mail 
        </p>
        <p>
           Travaille chez 
        </p>
        <input
          className="email"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
        <input
          className="company"
          disabled={true}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="button_container"
      />
      <div
        className="modal"
      />
    </form>
    <div
      className="position_form"
    >
      <h1>
        Postes occupés à ETIC
      </h1>
      <div
        className="positions"
      >
         
         
      </div>
      <input
        className="input_button add_position hidden"
        onClick={[Function]}
        type="button"
        value="Ajouter"
      />
    </div>
  </section>,
]
`;
